kubernetes/meddream-tokenservice/resources/manifest.yml
---
apiVersion: v1
kind: Service
metadata:
  name: meddream-tokenservice
spec:
  ports:
    - name: tokensvc
      protocol: TCP
      port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meddream-tokenservice
spec:
  rules:
  - host: meddream-tokenservice.somedomain.ch
    http:
      paths:
      - backend:
          serviceName: meddream-tokenservice
          servicePort: tokensvc
        path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meddream-tokenservice-deployment
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
      containers:
        - name: meddream-tokenservice
          image: meddream/token-service
          volumeMounts:
            - name: meddream-tokenservice-application-properties-vol
              mountPath: /opt/token/application.properties
              subPath: application.properties
      volumes:
        - name: meddream-tokenservice-application-properties-vol
          configMap:
            name: meddream-tokenservice-application-properties-cm
